fix(panel): update logo spacing for short screens
feat(media): add small and medium heigh media queries
feat(blockquote): make font color inherit and update border color

--- a/core/scss/components/panel.scss
+++ b/core/scss/components/panel.scss
@@ -27,6 +27,14 @@
       padding-top: rem-calc(188);
     }
 
+    @media #{$v-small-only} {
+      padding-top: rem-calc(80);
+    }
+
+    @media #{$v-medium-only} {
+      padding-top: rem-calc(132);
+    }
+
     &--full {
       z-index: $zindex-modal-background - 1;
       width: 100vw;
@@ -103,8 +111,13 @@
         justify-content: center;
 
         @media #{$medium-up} {
-          margin-right: rem-calc(20);
           margin-bottom: 0;
+        }
+      }
+
+      .footer__copyright {
+        @media #{$medium-up} {
+          margin-left: rem-calc(20);
         }
       }
 
