--- a/core/scss/settings/media.scss
+++ b/core/scss/settings/media.scss
@@ -11,33 +11,43 @@ $large-range:   ($medium-breakpoint + em-calc(1), $large-breakpoint) ;
 $xlarge-range:  ($large-breakpoint  + em-calc(1), $xlarge-breakpoint);
 $xxlarge-range: ($xlarge-breakpoint + em-calc(1), em-calc(99999999));
 
-$screen: "only screen";
+$vertical-small-breakpoint: em-calc(600);
+$vertical-medium-breakpoint: em-calc(800);
 
-$landscape: "#{$screen} and (orientation: landscape)";
-$portrait: "#{$screen} and (orientation: portrait)";
+$vertical-small-range:   (0, $vertical-small-breakpoint);
+$vertical-medium-range:  ($vertical-small-breakpoint  + em-calc(1), $vertical-medium-breakpoint);
+$vertical-large-range:  ($vertical-medium-breakpoint  + em-calc(1), em-calc(99999999));
+
+$screen: 'only screen';
+
+$landscape: '#{$screen} and (orientation: landscape)';
+$portrait: '#{$screen} and (orientation: portrait)';
 
 $small-up: $screen;
-$small-only: "#{$screen} and (max-width: #{upper-bound($small-range)})";
+$small-only: '#{$screen} and (max-width: #{upper-bound($small-range)})';
 
-$medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})";
-$medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})";
+$medium-up: '#{$screen} and (min-width:#{lower-bound($medium-range)})';
+$medium-only: '#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})';
 
-$large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})";
-$large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})";
+$large-up: '#{$screen} and (min-width:#{lower-bound($large-range)})';
+$large-only: '#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})';
 
-$xlarge-up: "#{$screen} and (min-width:#{lower-bound($xlarge-range)})";
-$xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})";
+$xlarge-up: '#{$screen} and (min-width:#{lower-bound($xlarge-range)})';
+$xlarge-only: '#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})';
 
-$xxlarge-up: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})";
-$xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (max-width:#{upper-bound($xxlarge-range)})";
+$xxlarge-up: '#{$screen} and (min-width:#{lower-bound($xxlarge-range)})';
+$xxlarge-only: '#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (max-width:#{upper-bound($xxlarge-range)})';
+
+$v-small-only: '#{$screen} and (max-height: #{$vertical-small-breakpoint})';
+$v-medium-only: '#{$screen} and (min-width:#{lower-bound($vertical-medium-range)}) and (max-width:#{upper-bound($vertical-medium-range)})';
 
 $retina: (
-  "#{$screen} and (-webkit-min-device-pixel-ratio: 2)",
-  "#{$screen} and (min--moz-device-pixel-ratio: 2)",
-  "#{$screen} and (-o-min-device-pixel-ratio: 2/1)",
-  "#{$screen} and (min-device-pixel-ratio: 2)",
-  "#{$screen} and (min-resolution: 192dpi)",
-  "#{$screen} and (min-resolution: 2dppx)"
+  '#{$screen} and (-webkit-min-device-pixel-ratio: 2)',
+  '#{$screen} and (min--moz-device-pixel-ratio: 2)',
+  '#{$screen} and (-o-min-device-pixel-ratio: 2/1)',
+  '#{$screen} and (min-device-pixel-ratio: 2)',
+  '#{$screen} and (min-resolution: 192dpi)',
+  '#{$screen} and (min-resolution: 2dppx)'
 );
 
 // Legacy
