--- a/core/scss/settings/typography.scss
+++ b/core/scss/settings/typography.scss
@@ -115,14 +115,14 @@ $definition-list-header-margin-bottom: .3rem !default;
 $definition-list-margin-bottom: rem-calc(12) !default;
 
 // We use these to style blockquotes
-$blockquote-font-color: scale-color($header-font-color, $lightness: 35%) !default;
+$blockquote-font-color: inherit !default;
 $blockquote-padding: rem-calc(9 20 0 19) !default;
-$blockquote-border-width: 1px !default;
+$blockquote-border-width: 4px !default;
 $blockquote-padding: 0.5rem 1rem calc(0.25rem + #{$blockquote-border-width}) 1rem !default;
-$blockquote-border: $blockquote-border-width solid $gray-6 !default;
+$blockquote-border: $blockquote-border-width solid $gray-3 !default;
 
 $blockquote-cite-font-size: rem-calc(13) !default;
-$blockquote-cite-font-color: scale-color($header-font-color, $lightness: 23%) !default;
+$blockquote-cite-font-color: inherit !default;
 $blockquote-cite-link-color: $blockquote-cite-font-color !default;
 
 // Acronym styles
